# opensportslib

./: .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  DEVELOPERS.md  LICENSE-COMMERCIAL  MANIFEST.in  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  run.sh  submit_ssl_mae.sh  submit_ssl_test.sh  train.py
.github/workflows/: ci-tests.yml  docs.yml  publish-dev.yml  publish-release.yml  publish.yml
api/api/: index.html
configs/: default.yaml
contributing/: index.html
datasets/: dataloader.py
docs/: contributing.md  index.md
docs/api/: api.md
docs/config/: config-guide.md
docs/getting-started/: installation.md  project_structure.md  slurm.md
docs/model/: zoo.md
docs/tni/: config-guide.md  tni.md
examples/configs/: README.md  classification_tracking.yaml  classification_video.yaml  localization.yaml
examples/quickstart/: README.md  basic_classification.py  basic_localization.py
getting-started/installation/: index.html
getting-started/project_structure/: index.html
getting-started/slurm/: index.html
models/: model.py  mvaggregate.py
notebooks/: data_processing.ipynb
opensportslib/: __init__.py  cli.py
opensportslib/apis/: README.md  __init__.py  base_task_model.py  classification.py  localization.py  pretraining.py
opensportslib/config/: classification.yaml  classification_tracking.yaml  localization-e2e-ocv.yaml  localization-json_calf_resnetpca512.yaml  localization-json_netvlad++_resnetpca512.yaml  localization.yaml  sngar-frames.yaml  sngar-tracking.yaml  sngar_frames.yaml
opensportslib/datasets/: builder.py  classification_dataset.py  localization_dataset.py  pretraining_dataset.py
opensportslib/docs/: CONTRIBUTING.md
opensportslib/metrics/: classification_metric.py  localization_metric.py
opensportslib/models/: builder.py
opensportslib/setup/: README.md  setup.py
opensportslib/tools/: __init__.py  _common.py  hf_transfer.py  (+2 more)
scripts/: run_smoke_tests.sh
search/: search_index.json
soccernetpro/: __init__.py
tests/: conftest.py  test_classification_dataset_paths.py  test_classification_trainer_dataloader.py  test_config_utils_smoke.py  test_conversion_tools.py  test_e2e_classification.py  test_hf_transfer_tools.py  test_installation.py  test_localization_dali_filenames.py  test_package_smoke.py  test_public_apis_smoke.py  test_subset_train_infer_integration.py  test_task_model_api_contract.py
tools/: README.md  upload_osl_hf.py
utils/: mv_batch_tensor.py
(+136 files in other folders)
